// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gitt at button skal vises Når button rendres Så vises button 1`] = `
<div>
  <button
    class="sc-AxhCb kvOBoY"
  >
    <span
      class="sc-AxjAm bHmITJ"
    >
      <span
        class="sc-AxiKw ikgxwu"
        data-testid=""
      >
        Button
      </span>
    </span>
  </button>
</div>
`;

exports[`Gitt at button skal vises Når button rendres med ikoner Så vises ikonene 1`] = `
<div>
  <button
    class="sc-AxhCb ghvZHC"
  >
    <span
      class="sc-AxjAm bHmITJ"
    >
      <div
        class="sc-AxheI ifuJNm"
        data-testid=""
        size="38"
      >
        <svg
          aria-hidden="true"
          class="hnds-style-icon "
          fill="white"
          height="38"
          role="img"
          viewBox="0 0 48 48"
          width="38"
        >
          <path
            d="M22.504 31.578l-9.781-10.162 1.822-1.752 7.959 8.269 14.265-14.819 1.821 1.752z"
          />
        </svg>
      </div>
      <span
        class="sc-AxiKw ikgxwu"
        data-testid=""
      >
        Button
      </span>
      <div
        class="sc-AxheI ifuJNm"
        data-testid=""
        size="38"
      >
        <svg
          aria-hidden="true"
          class="hnds-style-icon "
          fill="white"
          height="38"
          role="img"
          viewBox="0 0 48 48"
          width="38"
        >
          <path
            d="M22.504 31.578l-9.781-10.162 1.822-1.752 7.959 8.269 14.265-14.819 1.821 1.752z"
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;
